--- a/framework/test.html
+++ b/framework/test.html
@@ -1,2 +1,21 @@
+<!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8">
+		<title>Portfolio Page</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
+	<body>
+		<div class="grid">
+			<div class="row">
+				<div class="col-2">2 Columns</div>
+				<div class="col-10">10 Columns</div>
+			</div>
+
+			<div class="row">
+				<div class="col-3">3 Columns</div>
+				<div class="col-9">9 Columns</div>
+			</div>
+		</div>
+	</body>
 </html>
