Style changes to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="row">
-			<div class="col-2">Logo</div>
+			<div class="col-2"><img src="http://www.placehold.it/145x130"></div>
 			<div class="col-10" style="text-align: right;"><h1>Zarqul Tech<br />Portfolio</h1></div>
 		</div>
 
@@ -22,9 +22,15 @@
 		</div>
 
 		<div class="row">
-			<div class="col-4"><img src="http://placekitten.com/310/200"></div>
-			<div class="col-4"><img src="http://placekitten.com/310/200"></div>
-			<div class="col-4"><img src="http://placekitten.com/310/200"></div>
+			<div class="col-4 item"><img src="http://placekitten.com/310/200"></div>
+			<div class="col-4 item"><img src="http://placekitten.com/310/200"></div>
+			<div class="col-4 item"><img src="http://placekitten.com/310/200"></div>
+		</div>
+
+		<div class="row">
+			<div class="col-4 item-text">Placeholder</div>
+			<div class="col-4 item-text">Placeholder 2</div>
+			<div class="col-4 item-text">Placeholder 3</div>
 		</div>
 	</body>
 </html>
