Added photos and more style, changed layout somewhat

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 	<body>
 		<div class="row">
 			<div class="col-2"><img src="http://www.placehold.it/145x130"></div>
-			<div class="col-10" style="text-align: right;"><h1>Zarqul Tech<br />Portfolio</h1></div>
+			<div class="col-6 icons"><a href="mailto:joergen@zarqul.no"><img src="images/mail.png"></a><a href="https://facebook.com/zarqultech"><img src="images/facebook.png"></a><a href="https://github.com/zarqul"><img src="images/github.png"></a></div>
+			<div class="col-4" style="text-align: right;"><h1>Zarqul Tech<br />Portfolio</h1></div>
 		</div>
 
 		<div class="row">
-			<div class="col-12"><img src="http://placekitten.com/960/300"></div>
+			<div class="col-12"><img src="images/programming.png"></div>
 		</div>
 		
 		<div class="row">
@@ -22,15 +23,20 @@
 		</div>
 
 		<div class="row">
-			<div class="col-4 item"><img src="http://placekitten.com/310/200"></div>
+			<div class="col-4 item"><a href="http://tech.zarqul.it/ppcal/"><img src="images/polar.png"></a></div>
 			<div class="col-4 item"><img src="http://placekitten.com/310/200"></div>
 			<div class="col-4 item"><img src="http://placekitten.com/310/200"></div>
 		</div>
 
 		<div class="row">
-			<div class="col-4 item-text">Placeholder</div>
+			<div class="col-4 item-text">Polar Party 25 - Get Cyberbunk'd</div>
 			<div class="col-4 item-text">Placeholder 2</div>
 			<div class="col-4 item-text">Placeholder 3</div>
+		</div>
+		<div class="row">
+			<div class="col-4 item-desc">Event-timer for stage shows</div>
+			<div class="col-4 item-desc">PH 2</div>
+			<div class="col-4 item-desc">PH 3</div>
 		</div>
 	</body>
 </html>
