--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 		<div class="row text-center">
 			<div class="col-md-4 item-text"><a href="http://tech.zarqul.it/ppcal/"><img class="img-responsive" src="images/ppcal.png"><p class="featured-title">Polar Party 25 - Get Cyberbunk'd</p><p class="featured-text">Event-timer for stage shows</p></a></div>
-			<div class="col-md-4 item"><img class="img-responsive" src="http://placekitten.com/400/250"><p class="featured-title">Placeholder 2</p><p class="featured-text">PH2</p></div>
-			<div class="col-md-4 item"><img class="img-responsive" src="http://placekitten.com/400/250"><p class="featured-title">Placeholder 3</p><p class="featured-text">PH3</p></div>
+			<div class="col-md-4 item"><img class="img-responsive" src="https://placekitten.com/400/250"><p class="featured-title">Placeholder 2</p><p class="featured-text">PH2</p></div>
+			<div class="col-md-4 item"><img class="img-responsive" src="https://placekitten.com/400/250"><p class="featured-title">Placeholder 3</p><p class="featured-text">PH3</p></div>
 		</div>
 	</div>
 	</body>
